--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# DS Store
+.DS_Store
+
+# Environment variables
+*.env
+
 # Distribution / packaging
 .Python
 build/
