--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-newsapi-python=0.2.7
-pandas=2.2.2
-python-dotenv=1.0.1
-transformers=4.41.2
-fast_ml=3.68
-scipy=1.31.1
-matplotlib=3.9.0
-seaborn=0.13.2
-scikit-learn=1.5.0
-tensorflow=2.16.1
+newsapi-python==0.2.7
+pandas==2.2.2
+python-dotenv==1.0.1
+transformers==4.41.2
+fast_ml==3.68
+scipy==1.13.1
+matplotlib==3.9.0
+seaborn==0.13.2
+scikit-learn==1.5.0
+tensorflow==2.16.1
+torch==2.3.1
+datasets==2.19.2
