--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+# For python==3.12.3
 newsapi-python==0.2.7
 pandas==2.2.2
 python-dotenv==1.0.1
-transformers==4.41.2
-fast_ml==3.68
-scipy==1.13.1
 matplotlib==3.9.0
 seaborn==0.13.2
-scikit-learn==1.5.0
-tensorflow==2.16.1
-torch==2.3.1
-datasets==2.19.2
 tk==0.1.0
 customtkinter==5.2.2
+yfinance==0.2.40
+mplfinance==0.12.10b0
+sqlalchemy==2.0.31
+dateutil==24.0
+
+# Model ingestion
+torch==2.3.1
+transformers==4.41.2
+
+# Sentiment model training - comment out if not training model
+fast_ml==3.68
+scipy==1.13.1
+scikit-learn==1.5.0
+tensorflow==2.16.1
+datasets==2.19.2
