--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dateutil==24.0
 # Model ingestion
 torch==2.3.1
 transformers==4.41.2
+google-cloud-storage==2.17.0
 
 # Sentiment model training - comment out if not training model
 fast_ml==3.68
