--- a/headline_analyzer/requirements.txt
+++ b/headline_analyzer/requirements.txt
@@ -2,6 +2,7 @@ pandas==2.2.2
 numpy==1.26.4
 google-cloud-storage==2.17.0
 transformers==4.41.2
+transformers[torch]==4.41.2
 torch==2.3.1
 newsapi-python==0.2.7
 Python-dotenv==1.0.1
